finish navigation bar

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,31 +8,36 @@
   </head>
 
   <body>
-    <div class="topbar">
-    <ul>
-      <li><a href="#portfolio">Portfolio</a></li>
-      <li><a href="#workex">Work ex</a></li>
-      <li><a href="#projectex">Projects</a></li>
-      <li><a href="#acheivements">Acheivements</a></li>
-      <li><a href="#contacts">Contacts</a></li>
-    </ul>
-    </div>
+    <nav>
+        <div class="logo">
+          <h1>THE SKYNET</h1>
+        </div>
+
+        <ul class="tabs">
+          <li><a href="#about">about</a></li>
+          <li><a href="#projects">projects</a></li>
+          <li><a href="#acheivements">acheivements</a></li>
+          <li><a href="#contacts">contacts</a></li>
+        </ul>
+
+        <div class="nav-icon">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+    </nav>
     
-    <section id="portfolio">
-      <header>Hi, I'm Kate.</header>
+    <section id="about">
+      <header>Hi, this's Skynet.</header>
 
     </section>
 
-    <section id="workex">
-      <header>This is my work experience</header>
-    </section>
-
-    <section id="projectex">
-      <header>This is  project experience</header>
+    <section id="projects">
+      <header>Projects</header>
     </section>
 
     <section id="acheivements">
-      <header>These are my acheivements</header>
+      <header>Acheivements</header>
     </section>
 
     <section id="contacts">
