--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,7 +10,7 @@
   <body>
     <nav>
         <div class="logo">
-          <h1>THE SKYNET</h1>
+          <h1>the SKYNET.</h1>
         </div>
 
         <ul class="tabs">
